Partial fix for DOCS-140: Improve readability of long commands
Tested with forgerock-doc-maven-plugin-test

--- a/forgerock-doc-default-branding/trunk/src/main/resources/dfo.css
+++ b/forgerock-doc-default-branding/trunk/src/main/resources/dfo.css
@@ -252,6 +252,12 @@ div.synopsis {
     white-space: pre;
 }
 
+div.flat,
+div.screen {
+    border: thin dashed #ccc;
+    padding: 0.25em;
+}
+
 .toggle, .tocollapse, .toexpand, .bookcollapse, .bookexpand {
     position: relative;
     left: -24px;
